2011-05-04  Jay Civelli  <jcivelli@chromium.org>

Reviewed by Ojan Vafai.

        Send the char events to the select popup if one is showing to fix
        a bug were pressing a letter would not select the matching option.
        https://bugs.webkit.org/show_bug.cgi?id=47769

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::keyEvent):
        (WebKit::WebViewImpl::charEvent):
        * src/WebViewImpl.h:

Canonical link: https://commits.webkit.org/75444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85759 268f45cc-cd09-0410-ab3c-d52691b4dbfc